I implemented a generic result object that is returned for every request so as to ensure consistency and ease implementation in the frontend